# gpupp

./: CMakeLists.txt  README  doxygen.conf  doxygen_main.h  gpupp-matmul-cl.cpp  gpupp-test-cl-mpi.cpp  gpupp-test-cl.cpp  gpupp-test-cu.cpp  license
cuda/: CUDADeviceInfoTable.h  CUDAStatusCodesTable.h  gpupp.cpp  gpupp.h
opencl/: OpenCLDeviceInfoTable.h  OpenCLStatusCodesTable.h  gpupp.cpp  gpupp.h
test/: matmul-asymmetric-in-progress.cl  matmul.cl  test-command-line.cpp  vecmatmul.cl  vecmatmul.cu  vecmatmul.ptx
utility/: Any.h  ResourceHandler.h  Timer.h  alignment.h  varargs.h
